@startuml
' Bounded Context: tracking
' Compact view: aggregates, services, repositories, controllers.
' Individual commands/queries/resources/assemblers are omitted for readability.

left to right direction
skinparam linetype ortho
skinparam nodesep 30
skinparam ranksep 50
skinparam shadowing false
skinparam packageStyle rectangle
skinparam class {
  BackgroundColor White
  ArrowColor #444444
  BorderColor #333333
}

package "domain.model.aggregates" {
  class Device {
    +MacAddress macAddress
    +ResidentId residentId
    +NursingHomeId nursingHomeId
    +String externalDeviceId
    +LocalDateTime assignedAt
    +AssignmentStatus status
    +IotStatus iotStatus
    +DeviceType deviceType
  }
  class Location <<MongoDB document "locations">> {
    +Long deviceId
    +Coordinates coordinates
    +LocalDateTime recordedAt
  }
  class Measurement <<MongoDB document "measurements">> {
    +DeviceId deviceId
    +LocalDateTime timestamp
    +Integer heartRate
    +Double temperature
    +Double ambientTemperature
    +Integer oxygenSaturation
    +Boolean clinicalRecord
  }
}

package "domain.model.events" {
  class LocationRecordedEvent
  class MeasurementRecordedEvent
}

package "domain.services" {
  interface DeviceCommandService
  interface DeviceQueryService
  interface LocationCommandService
  interface MeasurementCommandService
  interface MeasurementQueryService
}

package "application.internal (command/query services)" {
  class DeviceCommandServiceImpl
  class DeviceQueryServiceImpl
  class LocationCommandServiceImpl
  class MeasurementCommandServiceImpl
  class MeasurementQueryServiceImpl
}

package "application.internal.eventhandlers" {
  class LocationRecordedEventHandler
  class MeasurementRecordedEventHandler
}

package "infrastructure.persistence.jpa.repositories" {
  interface DeviceRepository
}

package "infrastructure.persistence.mongodb.repositories" {
  interface LocationRepository
  interface MeasurementRepository
}

package "infrastructure.authorization" {
  class EdgeGatewayAuthFilter
  class EdgeGatewayAuthentication
}

package "application.acl / interfaces.acl" {
  interface TrackingContextFacade
  class TrackingContextFacadeImpl
}

package "interfaces.rest" {
  class DevicesController
  class EdgeRegistryController
  class LocationsController
  class MeasurementsController
  class NursingHomesDevicesController
  class ResidentDeviceController
}

DeviceRepository --> Device
LocationRepository --> Location
MeasurementRepository --> Measurement

DeviceCommandService <|.. DeviceCommandServiceImpl
DeviceQueryService <|.. DeviceQueryServiceImpl
LocationCommandService <|.. LocationCommandServiceImpl
MeasurementCommandService <|.. MeasurementCommandServiceImpl
MeasurementQueryService <|.. MeasurementQueryServiceImpl

DeviceCommandServiceImpl --> DeviceRepository
DeviceQueryServiceImpl --> DeviceRepository
LocationCommandServiceImpl --> LocationRepository
LocationCommandServiceImpl --> DeviceRepository : validates device exists
MeasurementCommandServiceImpl --> MeasurementRepository
MeasurementQueryServiceImpl --> MeasurementRepository

DevicesController --> DeviceCommandService
DevicesController --> DeviceQueryService
DevicesController --> MeasurementQueryService
NursingHomesDevicesController --> DeviceCommandService
NursingHomesDevicesController --> DeviceQueryService
ResidentDeviceController --> DeviceQueryService
LocationsController --> LocationCommandService
MeasurementsController --> MeasurementCommandService
EdgeRegistryController --> DeviceQueryService
EdgeRegistryController --> EdgeGatewayAuthentication : requires

' Domain events (real-time broadcast over WebSocket/STOMP)
Location --> LocationRecordedEvent : raises
LocationRecordedEventHandler --> LocationRecordedEvent : listens
Measurement --> MeasurementRecordedEvent : raises (when clinicalRecord)
MeasurementRecordedEventHandler --> MeasurementRecordedEvent : listens

' Edge gateway authentication (IoT devices calling in by MAC address)
EdgeGatewayAuthFilter --> DeviceRepository : findByExternalDeviceIdAndMacAddress
EdgeGatewayAuthFilter --> EdgeGatewayAuthentication : creates

' ACL facade
TrackingContextFacadeImpl ..|> TrackingContextFacade
TrackingContextFacadeImpl --> DeviceQueryService

@enduml
